--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -1,3 +1,11 @@
 {
-    "workspace.checkThirdParty": false
+    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "workspace.checkThirdParty": true,
+    "workspace.library": [
+        "/home/szymon/.local/share/nvim/lazy/lazy.nvim",
+        "/home/szymon/.config/nvim",
+        "/home/szymon/.local/share/bob/v0.9.1/nvim-linux64/share/nvim/runtime",
+        "/home/szymon/.local/share/bob/v0.9.1/nvim-linux64/lib/nvim",
+        "${3rd}/luassert/library"
+    ]
 }
